# my_3dbpp_project

./: class  pcl_with_3dbpp.cpp  projector.txt  todo.url
class_library/: calculatebpp.cpp
kinectv2_bpp/: AllHeader.h  BinpackingCalculate.cpp  BinpackingCalculate.h  CMakeLists.txt  CloudTransformation.cpp  CloudTransformation.h  KinectV2Interface.cpp  KinectV2Interface.h  ReadWriteFile.cpp  ReadWriteFile.h  cloudfilter.cpp  cloudfilter.h  howto.txt  main.cpp  mainProcess.cpp  mainProcess.h  miscellaneous.cpp  miscellaneous.h  passthrough_value.txt  pcl_visualizer.pro  pcl_visualizer.pro.user.51b8d35  pcl_visualizer.pro.user.edfb425  pclviewer.cpp  pclviewer.h  pclviewer.ui  planeparam.txt  planeparam_home.txt  planeparam_home2.txt  planeparam_lab.txt  planeparam_lab2.txt  segmentation.cpp  segmentation.h
kinectv2_bpp/3dbpp/: threedimentionalbpp.cpp  threedimentionalbpp.h
kinectv2_bpp/pcd_file/: 02.pcd  03.pcd  04.pcd  05.pcd  06.pcd  07.pcd  08.pcd  09.pcd  10.pcd  11.pcd  12.pcd  _blackbiscuit.pcd  _bluecookie.pcd  c_02.pcd  c_03.pcd  c_04.pcd  c_06.pcd  c_07.pcd  c_blackbiscuit.pcd  c_bluecookie.pcd
kinectv2_bpp/pcd_test/: p01.pcd  p02.pcd  p03.pcd  p04.pcd  p05.pcd  p06.pcd  p07.pcd  p08.pcd  p09.pcd  p10.pcd  p11.pcd  pcd_test.txt  pcd_test2.txt  pcd_test_all.txt
qt_bpp/: glwidget.cpp  mainwindow.cpp  mainwindow.h
